@@ -8,67 +8,71 @@ require_once(FS_ROOT."/../../../www/lib/nzb.php");
 require_once(FS_ROOT."/../../../www/lib/site.php");
 require_once(FS_ROOT."/../../../www/lib/consoletools.php");
 
-$db = new Db;
-$s = new Sites();
-$consoletools = new ConsoleTools();
-$site = $s->get();
-$timestart = TIME();
-$relcount = 0;
 
 //
 //	This script updates all releases with the guid from the nzb file.
 //
 
-if (!isset($argv[1]))
-{
+if (isset($argv[1]))
+	create_guids();
+else
 	usage();
-}
 
-$relrecs = $db->query(sprintf("SELECT ID, guid FROM releases where nzb_guid is null order by ID desc"));
-
-echo "\nUpdating ".sizeof($relrecs)." releases\n";
-$releases = new Releases();
-$nzb = new NZB();
-$reccnt = 0;
-foreach ($relrecs as $relrec)
+function create_guids()
 {
-	$reccnt++;
-	if (file_exists($nzbpath = $nzb->NZBPath($relrec['guid'])))
+	$db = new Db;
+	$s = new Sites();
+	$consoletools = new ConsoleTools();
+	$site = $s->get();
+	$timestart = TIME();
+	$relcount = 0;
+
+	$relrecs = $db->query(sprintf("SELECT ID, guid FROM releases where nzb_guid is null order by ID desc"));
+
+	echo "\nUpdating ".sizeof($relrecs)." release guids\n";
+	$releases = new Releases();
+	$nzb = new NZB();
+	$reccnt = 0;
+	foreach ($relrecs as $relrec)
 	{
-		$nzbpath = 'compress.zlib://'.$nzbpath;
-		$nzbfile = simplexml_load_file($nzbpath);
-
-		$binary_names = array();
-		foreach($nzbfile->file as $file)
+		$reccnt++;
+		if (file_exists($nzbpath = $nzb->NZBPath($relrec['guid'])))
 		{
-			$binary_names[] = $file["subject"];
-		}
-		if (count($binary_names) == 0)
-			continue;
+			$nzbpath = 'compress.zlib://'.$nzbpath;
+			$nzbfile = simplexml_load_file($nzbpath);
 
-		asort($binary_names);
-		$segment = "";
-		foreach($nzbfile->file as $file)
-		{
-			if ($file["subject"] == $binary_names[0])
+			$binary_names = array();
+			foreach($nzbfile->file as $file)
 			{
-				$segment = $file->segments->segment;
-				$nzb_guid = md5($segment);
+				$binary_names[] = $file["subject"];
+			}
+			if (count($binary_names) == 0)
+				continue;
 
-				$db->query("UPDATE releases set nzb_guid = " . $db->escapestring($nzb_guid) . " WHERE ID = " . $relrec["ID"]);
-				$relcount++;
-				$consoletools->overWrite("Updating:".$consoletools->percentString($reccnt,sizeof($relrecs))." Time:".$consoletools->convertTimer(TIME() - $timestart));
-				break;
+			asort($binary_names);
+			$segment = "";
+			foreach($nzbfile->file as $file)
+			{
+				if ($file["subject"] == $binary_names[0])
+				{
+					$segment = $file->segments->segment;
+					$nzb_guid = md5($segment);
+
+					$db->query("UPDATE releases set nzb_guid = " . $db->escapestring($nzb_guid) . " WHERE ID = " . $relrec["ID"]);
+					$relcount++;
+					$consoletools->overWrite("Updating:".$consoletools->percentString($reccnt,sizeof($relrecs))." Time:".$consoletools->convertTimer(TIME() - $timestart));
+					break;
+				}
 			}
 		}
 	}
-}
 
-if ($relcount > 0)
-	echo "\n";
-echo "Updated ".$relcount." release(s). This script ran for ";
-echo $consoletools->convertTime(TIME() - $timestart);
-echo ".\n";
+	if ($relcount > 0)
+		echo "\n";
+	echo "Updated ".$relcount." release(s). This script ran for ";
+	echo $consoletools->convertTime(TIME() - $timestart);
+	echo ".\n";
+}
 
 function usage()
 {
