@@ -54,7 +54,7 @@ class queue_runner(threading.Thread):
 
 		while True:
 			try:
-				my_id = self.my_queue.get(True, 1)
+				my_id = self.my_queue.get(True, .5)
 			except:
 				if time.time() - time_of_last_run > 3:
 					return
@@ -75,10 +75,10 @@ def main():
 	signal.signal(signal.SIGINT, signal_handler)
 
 	if True:
-		#spawn a pool of place worker threads
+		#spawn a pool of worker threads
 		for i in range(int(run_threads[0])):
 			p = queue_runner(my_queue)
-			p.setDaemon(True)
+			#p.setDaemon(False)
 			p.start()
 
 	print("\nUpdate Binaries Threaded Started at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
@@ -89,8 +89,8 @@ def main():
 
 	my_queue.join()
 
+	print("\nUpdate Binaries Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
+	print("Running time: %s" %(str(datetime.timedelta(seconds=time.time() - start_time))))
+	
 if __name__ == '__main__':
 	main()
-
-print("\nUpdate Binaries Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
-print("Running time: %s" %(str(datetime.timedelta(seconds=time.time() - start_time))))
