@@ -82,7 +82,7 @@ def main():
 		#spawn a pool of place worker threads
 		for i in range(int(run_threads[0])):
 			p = queue_runner(my_queue)
-			p.setDaemon(True)
+			p.setDaemon(False)
 			p.start()
 
 	print("\n\nGrabNZBs Threaded Started at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
@@ -93,8 +93,11 @@ def main():
 
 	my_queue.join()
 
+	final = "true"
+	subprocess.call(["php", pathname+"/../../testing/DB_scripts/populate_nzb_guid.php", ""+final])
+	print("\n\nGrabNZBs Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
+	print("Running time: %s" %(str(datetime.timedelta(seconds=time.time() - start_time))))
+
+
 if __name__ == '__main__':
 	main()
-
-print("\n\nGrabNZBs Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
-print("Running time: %s" %(str(datetime.timedelta(seconds=time.time() - start_time))))
