@@ -88,7 +88,7 @@ def main():
 		#spawn a pool of place worker threads
 		for i in range(run_threads):
 			p = queue_runner(my_queue)
-			p.setDaemon(True)
+			p.setDaemon(False)
 			p.start()
 
 	print("\nPartrepair Threaded Started at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
@@ -99,8 +99,8 @@ def main():
 
 	my_queue.join()
 
+	print("\nPartrepair Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
+	print("Running time: %s" %(str(datetime.timedelta(seconds=time.time() - start_time))))
+
 if __name__ == '__main__':
 	main()
-
-print("\nPartrepair Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
-print("Running time: %s" %(str(datetime.timedelta(seconds=time.time() - start_time))))
