@@ -81,7 +81,7 @@ def main(args):
 		#spawn a pool of place worker threads
 		for i in range(int(run_threads[0])):
 			p = queue_runner(my_queue)
-			p.setDaemon(True)
+			p.setDaemon(False)
 			p.start()
 
 	print("\nPostProcess Old Threaded Started at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
@@ -92,8 +92,8 @@ def main(args):
 
 	my_queue.join()
 
+	print("\nPostProcess Old Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
+	print("Running time: %s" %(str(datetime.timedelta(seconds=time.time() - start_time))))
+
 if __name__ == '__main__':
 	main(sys.argv[1:])
-
-print("\nPostProcess Old Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
-print("Running time: %s" %(str(datetime.timedelta(seconds=time.time() - start_time))))
